#119250 - View does not work on Solaris Ensure PATH setup correctly on Solaris to /usr/demo/mercurial and also make sure hgext.hgk extension is in user's ~/.hgrc file